0.02
 - Update copyright years.

0.01 2023-09-02T12:55:19+02:00
 - First version.