@@ -1,6 +1,5 @@
 TODO
 ====
-2. Add checks in constructor.
 4. Add cb_id parameter for callback to generating of ids.
 5.
 
@@ -11,3 +10,6 @@ OK [20230902] skim
 
 1. Add doc.
 OK [20230902] skim
+
+2. Add checks in constructor.
+OK [20240314] skim
