@@ -1,4 +1,5 @@
 0.02
+ - Add constructor checks.
  - Update copyright years.
 
 0.01 2023-09-02T12:55:19+02:00
